--- a/app/views/change_user_settings/edit.html.erb
+++ b/app/views/change_user_settings/edit.html.erb
@@ -11,11 +11,12 @@
         <div class="form-group col-md-12 col-sm-6">
           <label for="registeremp_password">Password</label>
           <br> 
-          <input autocomplete="off" class="form-control input-sm" placeholder="password" type="password" name="passwordchange[password]" id="registeremp_password" data-validation=" required length" data-validation-length="min">
+          <input autocomplete="off" class="form-control input-sm passwordEntered" placeholder="password" type="password" name="passwordchange[password]" id="registeremp_password" data-validation=" required length" data-validation-length="min">
         </div>
         <div class="form-group col-md-12 col-sm-6">
           <label for="registeremp_password_confirmation">password confirmation</label>
-          <input autocomplete="off" class="form-control input-sm" placeholder="password confirmation" type="password" name="passwordchange[password_confirmation]" id="registeremp_password_confirmation" data-validation=" required length" data-validation-length="min8">
+          <input autocomplete="off" class="form-control input-sm passwordConf" placeholder="password confirmation" type="password" name="passwordchange[password_confirmation]" id="registeremp_password_confirmation" data-validation=" required length" data-validation-length="min8">
+          <span class="confirmPswErr" style="display:none;color: #a94442">password doesn't match</span>
         </div>
         <div class="form-group col-md-6 col-md-push-4 col-sm-6">
           <button class="btn btn-success changpswbtn">confirm</button>
@@ -28,5 +29,17 @@
 <script type="text/javascript">
 $(document).ready(function () {
     $.validate();
+    $('.passwordConf').blur(function(){
+    if($('.passwordConf').val()!="" && $('.passwordEntered').val()!=""){
+      if($('.passwordConf').val() == $('.passwordEntered').val())
+      {
+         $('.confirmPswErr').hide()
+        return true
+      }
+        else{
+         $('.confirmPswErr').show()
+        }
+      }
+    })
   });
 </script>
