--- a/app/views/leaves/new.html.erb
+++ b/app/views/leaves/new.html.erb
@@ -33,7 +33,7 @@
 		<div class="form-group">
 			<label class="col-md-4 control-label" for="submit"></label>
 				<%= f.submit "Apply for leave", class:"btn btn-primary  applyBtn" %>
-				<button id="claar data" name="clear" class="btn btn-default btnClr">clear</button>
+				<button type ="reset" value ="reset" id="clear data" name="clear" class="btn btn-default btnClr">clear</button>
 			</div>
 		<% end %>
 		</div>
