--- a/app/views/registernewemployees/new.html.erb
+++ b/app/views/registernewemployees/new.html.erb
@@ -113,7 +113,7 @@
 
       <div class="form-group col-md-6 col-sm-6">
        <%= f.label :role,"Role" %>
-       <%= f.collection_select :role, Employee::ROLES, :to_s, :humanize,{},{class:'form-control input-sm'} %>
+        <%= f.collection_select :role, Employee::ROLES, :to_s, :humanize,{:include_blank => "----select your role----"},{class:'form-control input-sm'} %>
      </div>
 
      <div class="form-group col-md-8 col-md-push-5 col-sm-12" style="margin-top:22px; margin-bottom:22px">
@@ -156,6 +156,7 @@
       }
     })
    $('.mobileNumber').blur(function(){
+  
     if($('.mobileNumber').val()!="" && $('.mobileNumber').val().length ==10){
      return true
     }
@@ -167,7 +168,6 @@
    
  });
 </script>
-
 
 
 
