updated cron tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
    <% if current_employee.present? %>
   <footer class="footer footerClass" style="background: #222222;">
       <div class="container">
-        <p class="text-muted">&copy at codingmart technologies -2017</p>
+        <p class="text-muted"> Copyright &copy -2017</p>
       </div>
-    </footer>
+    </footer> 
     <% end %>
 
   <div class="col-md-6" style="margin-bottom: 12%;">
