--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,4 +39,9 @@
     text-align: center;
     font-weight: bold;
 }
-    
+.codingmartLogo{
+    font-weight: bold;
+    }
+.navbar-brand{
+     color: white;
+}
