--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,43 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-push-4">
+      <div class="form-wrap">
+       <h3>Change your password</h3>
+       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+       <%= f.hidden_field :reset_password_token %>
+       <div class="form-group">
+       <%= f.label :password, "New password" %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off",class:'form-control passwordEntered',data:{:validation =>"required","validation-error-msg" => "Password field shouldn't blank"} %>
+      </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation, "Confirm new password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off",class:'form-control passwordConf',data:{:validation =>"required","validation-error-msg" => "This field shouldn't blank"} %>
+        <span class="confirmPswErr" style="display:none;color: #a94442">password doesn't match</span>
+        <br />  
+      </div>
+        <%= f.submit "Change my password",class: "btn btn-sm btn-success" %>
+      <% end %>
+    </div>
   </div>
+</div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+<script type="text/javascript">
+  $(document).ready(function () {
+    $.validate();
+    $('.passwordConf').blur(function(){
+      if($('.passwordConf').val()!="" && $('.passwordEntered').val()!=""){
+        if($('.passwordConf').val() == $('.passwordEntered').val())
+        {
+         $('.confirmPswErr').hide()
+         return true
+       }
+       else{
+        $('.passwordConf').val('')
+         $('.confirmPswErr').show()
+       }
+     }
+   })
+  });
+</script>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
