--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Salary<span class="caret"></span>
           <ul class="dropdown-menu">
             <li><a href="/employee/<%=current_employee.id %>/payslip">view monthly report</a></li>
-
+ <!-- <li>           <%#= link_to "Attendance",  send_monthly_report_path %> </li> -->
             <%# if current_employee.role == "admin" || current_employee.role == "superadmin"  %>
             <!-- <li><a href="/salaries/index">Employee salaries</a></li> -->
             <%# end %>
