--- a/app/views/attendances/showpdf.pdf.erb
+++ b/app/views/attendances/showpdf.pdf.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
 	  <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
 	  <div class="">
 	  	<p> <h4 style="text-align:center">CODINGMART TECHNOLOGIES PRIVATE LIMITED</h4>
-	  	<small style="margin-left:15%">No2. Datri nivas,second floor,opposite to manyatha tech park,nagavara Bangalore</small>
+	  	<small style="margin-left:15%">No2. Datri nivas,second floor,Opposite To Manyatha tech park,Nagavara Bangalore</small>
 	  	<br/>
 	  	<p style="text-align:center"> Payslip of the month <%= ALL_MONTHS[@first_month_report.month] %></p>
 	  </div>
@@ -35,7 +35,7 @@
 				</tr>
 				<tr>
 					<td><span class="fontweight">Joining date </span><span class="namespace doj"><%= employee.doj %></span></td>
-					<td><span class="fontweight">pf number </span><span class="namespace pfNumber"><%= employee.pfNumber %></span></td>
+					<td><span class="fontweight">Pf number </span><span class="namespace pfNumber"><%= employee.pfNumber %></span></td>
 				</tr>
 				<tr>
 					<td><span class="fontweight">Effective working days</span><span class="namespace doj">&nbsp&nbsp&nbsp<%= reports.effectiveWorkDays %></span></td>
