--- a/app/views/registernewemployees/index.html.erb
+++ b/app/views/registernewemployees/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="table-responsive">          
-			<table class="table table-condensed table-hover">
+			<table class="table table-condensed table-hover" style="margin-top:5%">
 				<thead>
 				<th class="info">Employee Id</th>
 					<th class="info">Employee Name</th>
